--- a/css/mjCont.css
+++ b/css/mjCont.css
@@ -1,170 +1,42 @@
-.updatedcss {
-    background: none repeat scroll 0 0 #FFFFE0;
-    border: 1px solid #D3D3D3;
-    border-radius: 3px 3px 3px 3px;
-    margin: 0 auto 1.625em;
-    padding: 0.625em;
-    position: relative;
-    width: 94.9%;
-    color: #000;
-}
-
-
-.clear{
-	clear: both;
-	height: 0;
-	visibility: hidden;
-	display: block;
-}
-a{
-	text-decoration: none;
-}
-strong{
-	font-weight: 700;
-}
-/******* GENERAL RESET *******/
-h1{
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 1.2em;
-	border-bottom: 1px dotted #6b9ef1;
-	color: #5f95ef;
-	margin-bottom: 1em;
-}
-/******* LOGO *******/
-#logo{
-	margin-top: 1em;
-	display: block;
-}
-/******* /LOGO  *******/
-/******* CONTAINER *******/
-
-/******* /CONTAINER *******/
-/******* FORM *******/
-#mailform{
-	padding: 0 10px 10px;
-}
-#mailform label{
-	display: block;
-	color: #797979;
-	font-weight: 700;
-	line-height: 1.4em;
-}
-.fieldBlock select, #mailform select{height:3em;}
-.fieldBlock  input, .fieldBlock  select, #mailform input, #mailform select{
-	width: 314px;
-	padding: 6px;
-	color: #949494;
-	font-family: Arial,  Verdana, Helvetica, sans-serif;
-	font-size: 11px;
-	border: 1px solid #cecece;
-}
-.fieldBlock input.error , #mailform input.error{
-	background: #f8dbdb;
-	border-color: #e77776;
-}
-#mailform textarea{
-	width: 314px;
-	height: 72px;
-	padding: 6px;
-	color: #adaeae;
-	font-family: Arial,  Verdana, Helvetica, sans-serif;
-	font-style: italic;
-	font-size: 12px;
-	border: 1px solid #cecece;
-}
-#mailform textarea.error{
-	background: #f8dbdb;
-	border-color: #e77776;
-}
-#mailform div{
-	margin-bottom: 15px;
-	position:relative;
-}
-#mailform div span{
-	margin-left: 10px;
-	color: #b1b1b1;
-	font-size: 11px;
-	font-style: italic;
-}
-#mailform div span.error{
-	color: #e46c6e;
-}
-#mailform #send{
-	background: #6f9ff1;
-	color: #fff;
-	font-weight: 700;
-	font-style: normal;
-	border: 0;
-	cursor: pointer;
-}
-#mailform #send:hover{
-	background: #79a7f1;
-}
-#error{
-	margin-bottom: 20px;
-	border: 1px solid #efefef;
-}
-#error ul{
-	list-style: square;
-	padding: 5px;
-	font-size: 11px;
-}
-#error ul li{
-	list-style-position: inside;
-	line-height: 1.6em;
-}
-#error ul li strong{
-	color: #e46c6d;
-}
-#error.valid ul li strong{
-	color: #93d72e;
-}
-/******* /FORM *******/
-#mailform 	input[type="checkbox"]{
-	width:10px;
-}
-
-#mailform 	input[type="radio"]{
-	width:20px;
-} 
-
-input[type="text"], input[type="password"], textarea {
-	box-shadow:;
-	background:none;
-}
-#mailform label.error {
- 
-    bottom: -4px;
-    color: #dd514c;
-    font-size: 12px;
-    left: 3px;
-    padding: 3px;
-    position: absolute;
-}
-.h-134{	height:134px;}
-.h-71{	height:71px;}
-#mailform .w-16{width: 16px;}
-.p-12{padding: 12px;}
-.h-43{min-height:43px;}
-.h-100{min-height:100px;}
-.f-13{font-size:13px;}
-.error{color: #dd514c; width:324px; display:block;}
-label.error{text-align: right;}
-.fr{float:right; clear:both;}
-.fl{float:left; clear:both;}
-.message{color: #000000;}
-.fieldBlock{width: 53%;}
-#mjContact table td{height: 40px;}
-#mjContact table td:first-child{font-weight:bold;}
-
-.Eerror {
-background: none repeat scroll 0 0 #EEE;
-border: 1px solid #D3D3D3;
-border-radius: 3px 3px 3px 3px;
-margin: 0 auto 1.625em;
-padding: 0.625em;
-position: relative;
-width: 94.9%;
-color: #000;
-}
+#MJContactUs .updatedcss {background: none repeat scroll 0 0 #FFFFE0;border: 1px solid #D3D3D3;border-radius: 3px 3px 3px 3px;margin: 0 auto 1.625em;padding: 0.625em;position: relative;width: 94.9%;color: #000;}
+#MJContactUs .clear{clear: both;height: 0;visibility: hidden;display: block;}
+#MJContactUs a{text-decoration: none;}
+#MJContactUs strong{font-weight: 700;}
+#MJContactUs h1{font-weight: 700;font-size: 18px;line-height: 1.2em;border-bottom: 1px dotted #6b9ef1;color: #5f95ef;margin-bottom: 1em;}
+#MJContactUs #logo{margin-top: 1em;display: block;}
+#MJContactUs #mailform{padding: 0 10px 10px;}
+#MJContactUs #mailform label{display: block;color: #797979;font-weight: 700;line-height: 1.4em;}
+#MJContactUs .fieldBlock select, #mjcontact_us #mailform select{height:3em;}
+#MJContactUs .fieldBlock  input, #mjcontact_us .fieldBlock  select, #mjcontact_us #mailform input, #mjcontact_us #mailform select{	width: 314px;padding: 6px;color: #949494;font-family: Arial,  Verdana, Helvetica, sans-serif;font-size: 11px;border: 1px solid #cecece;}
+#MJContactUs .fieldBlock input.error , #mjcontact_us #mailform input.error{background: #f8dbdb;border-color: #e77776;}
+#MJContactUs #mailform textarea{width: 314px;height: 72px;padding: 6px;color: #adaeae;font-family: Arial,  Verdana, Helvetica, sans-serif;font-style: italic;font-size: 12px;border: 1px solid #cecece;}
+#MJContactUs #mailform textarea.error{background: #f8dbdb;border-color: #e77776;}
+#MJContactUs #mailform div{margin-bottom: 15px;	position:relative;}
+#MJContactUs #mailform div span{margin-left: 10px;color: #b1b1b1;font-size: 11px;font-style: italic;}
+#MJContactUs #mailform div span.error{color: #e46c6e;}
+#MJContactUs #mailform #send{background: #6f9ff1;color: #fff;font-weight: 700;font-style: normal;border: 0;cursor: pointer;}
+#MJContactUs #mailform #send:hover{background: #79a7f1;}
+#MJContactUs #error{margin-bottom: 20px;border: 1px solid #efefef;}
+#MJContactUs #error ul{	list-style: square;padding: 5px;font-size: 11px;}
+#MJContactUs #error ul li{list-style-position: inside;line-height: 1.6em;}
+#MJContactUs #error ul li strong{color: #e46c6d;}
+#MJContactUs #error.valid ul li strong{color: #93d72e;}
+#MJContactUs #mailform 	input[type="checkbox"]{width:10px;}
+#MJContactUs #mailform 	input[type="radio"]{width:20px;}
+#MJContactUs input[type="text"], input[type="password"], textarea {box-shadow:none;background:none;}
+#MJContactUs #mailform label.error {bottom: -4px;color: #dd514c;font-size: 12px;left: 3px;padding: 3px;position: absolute;}
+#MJContactUs .h-134{	height:134px;}.h-71{	height:71px;}
+#MJContactUs #mailform .w-16{width: 16px;}
+#MJContactUs .p-12{padding: 12px;}
+#MJContactUs .h-43{min-height:43px;}
+#MJContactUs .h-100{min-height:100px;}
+#MJContactUs .f-13{font-size:13px;}
+#MJContactUs .error{color: #dd514c; width:324px; display:block;}
+#MJContactUs label.error{text-align: right;}
+#MJContactUs .fr{float:right; clear:both;}
+#MJContactUs .fl{float:left; clear:both;}
+#MJContactUs .message{color: #000000;}
+#MJContactUs .fieldBlock{width: 53%;}
+#MJContactUs #mjContact table td{height: 40px;}
+#MJContactUs #mjContact table td:first-child{font-weight:bold;}
+#MJContactUs .Eerror {background: none repeat scroll 0 0 #EEE;border: 1px solid #D3D3D3;border-radius: 3px 3px 3px 3px;margin: 0 auto 1.625em;padding: 0.625em;position: relative;width: 94.9%;color: #000;}
